# r-vision-test

./: .gitignore  Cargo.toml  README.md  task.txt  Тестовое задание для Backend RUST.docx
common/: Cargo.toml
common/src/: types.rs
reader-producer/: Cargo.toml
reader-producer/reader/: Cargo.toml
reader-producer/reader/src/: lib.rs
reader-producer/src/: main.rs
tests/: Cargo.toml  test.rs
tests/files_to_send/: test_en.txt  test_en_min.txt  test_ru.txt  test_ru_min.txt
tests/recieved_files/: test_en_min.txt
writer-consumer/: Cargo.toml
writer-consumer/src/: main.rs
writer-consumer/writer/: Cargo.toml
writer-consumer/writer/src/: lib.rs
writer-consumer/writer/src/text_procesors/: mod.rs
writer-consumer/writer/src/text_processors/: mod.rs
