[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
reader = { path = "../reader-producer/reader" }
writer = { path = "../writer-consumer/writer" }
nats = "0.23.0"
relative-path = "1.7.2"

[[test]]
name = "test"
path = "test.rs"
